# learn-cpp

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
cmake/: CPM.cmake  CPack.cmake  Cache.cmake  CompilationFlags.cmake  CompilerWarnings.cmake  (+9 more)
src/: CMakeLists.txt
src/concurrency/: CMakeLists.txt
src/concurrency/atomic/: CMakeLists.txt  main.cpp
src/concurrency/intel-tbb/: CMakeLists.txt  main.cpp
src/concurrency/mutex/: CMakeLists.txt  main.cpp
src/concurrency/omp/: CMakeLists.txt  main.cpp
src/concurrency/parallel/: CMakeLists.txt  main.cpp
src/concurrency/thread-pool/: CMakeLists.txt  README.md  main.cpp
src/concurrency/threads/: CMakeLists.txt  main.cpp
src/data-structures/: CMakeLists.txt
src/data-structures/array/: CMakeLists.txt  README.md  main.cpp
src/data-structures/binary-tree/: CMakeLists.txt  README.md  main.cpp
src/data-structures/circular-buffer/: CMakeLists.txt  README.md  main.cpp
src/data-structures/hash-map/: CMakeLists.txt  README.md  main.cpp
src/data-structures/heap/: CMakeLists.txt  README.md  main.cpp
src/data-structures/linked-list/: CMakeLists.txt  README.md  circular.h  doubly.h  main.cpp  singly.h
src/data-structures/lru-cache/: CMakeLists.txt  README.md  main.cpp
src/data-structures/queue/: CMakeLists.txt  README.md  main.cpp
src/data-structures/stack/: CMakeLists.txt  README.md  main.cpp
src/data-structures/vector/: CMakeLists.txt  README.md  main.cpp
src/filesystem/: CMakeLists.txt
src/filesystem/watcher/: CMakeLists.txt  README.md  main.cpp
src/memory/: CMakeLists.txt
src/memory/move-semantics/: CMakeLists.txt  main.cpp
src/memory/pools/: CMakeLists.txt  README.md  main.cpp
src/memory/raii/: CMakeLists.txt  README.md  main.cpp
src/memory/reference-counting/: CMakeLists.txt  RADME.md  main.cpp
src/modules/: CMakeLists.txt
src/modules/math/: CMakeLists.txt  main.cpp  math.cpp
src/patterns/: CMakeLists.txt
src/patterns/behavioral/: CMakeLists.txt
src/patterns/behavioral/chain-of-responsibility/: CMakeLists.txt  README.md  main.cpp
src/patterns/behavioral/command_pattern/: CMakeLists.txt  README.md  main.cpp
src/patterns/behavioral/iterator/: CMakeLists.txt  README.md  main.cpp
src/patterns/behavioral/mediator/: CMakeLists.txt  README.md  main.cpp
src/patterns/behavioral/memento/: CMakeLists.txt  README.md  main.cpp
src/patterns/behavioral/observer/: CMakeLists.txt  README.md  main.cpp
src/patterns/behavioral/state/: CMakeLists.txt  README.md  main.cpp
src/patterns/behavioral/strategy/: CMakeLists.txt  README.md  main.cpp
src/patterns/behavioral/template-method/: CMakeLists.txt  README.md  main.cpp
src/patterns/behavioral/visitor/: CMakeLists.txt  README.md  main.cpp
src/patterns/creational/: CMakeLists.txt
src/patterns/creational/abstract-factory/: CMakeLists.txt  README.md  main.cpp
src/patterns/creational/builder/: CMakeLists.txt  README.md  main.cpp
src/patterns/creational/factory-method/: CMakeLists.txt  README.md  main.cpp
src/patterns/creational/prototype/: CMakeLists.txt  README.md  main.cpp
src/patterns/creational/singleton/: CMakeLists.txt  README.md  main.cpp
src/patterns/structural/adapter/: CMakeLists.txt  README.md  main.cpp
src/patterns/structural/bridge/: CMakeLists.txt  README.md  main.cpp
src/patterns/structural/composite/: CMakeLists.txt  README.md  main.cpp
src/patterns/structural/decorator/: CMakeLists.txt  README.md  main.cpp
src/patterns/structural/facade/: CMakeLists.txt  README.md  main.cpp
src/patterns/structural/flyweight/: CMakeLists.txt  README.md  main.cpp
src/patterns/structural/proxy/: CMakeLists.txt  README.md  main.cpp
src/real-world/: CMakeLists.txt
src/real-world/command-line/: CMakeLists.txt  main.cpp
src/real-world/configuration-manager/: CMakeLists.txt  main.cpp
src/real-world/event-bus/: CMakeLists.txt  main.cpp
src/real-world/file-manager/: CMakeLists.txt  main.cpp
src/real-world/http-client/: CMakeLists.txt  main.cpp
src/real-world/job-queue/: CMakeLists.txt  main.cpp
src/real-world/logger/: CMakeLists.txt  main.cpp
src/real-world/plugin-system/: CMakeLists.txt  README.md  example_plugin.cpp  main.cpp  plugin_interface.hpp
src/real-world/resource-manager/: CMakeLists.txt  main.cpp
src/real-world/signals/: CMakeLists.txt  main.cpp
src/real-world/ui/: CMakeLists.txt  main.cpp
src/real-world/undo-framework/: main.cpp
src/search/: CMakeLists.txt
src/search/binary-search/: CMakeLists.txt  README.md  main.cpp
src/search/linear-search/: CMakeLists.txt  README.md  main.cpp
src/search/ternary-search/: CMakeLists.txt  README.md  main.cpp
src/simd/: CMakeLists.txt  main.cpp
src/sorting/: CMakeLists.txt
src/sorting/bubble-sort/: CMakeLists.txt  README.md  main.cpp
src/sorting/quick-sort/: CMakeLists.txt  README.md  main.cpp
src/templates/: CMakeLists.txt
src/templates/sfinae/: CMakeLists.txt  README.md  main.cpp
src/templates/tmp/: CMakeLists.txt  README.md  main.cpp
src/templates/vardiac/: CMakeLists.txt  README.md  main.cpp
src/undo-framework/: CMakeLists.txt
tests/: CMakeLists.txt  tst_mytest.cpp
(+3 files in other folders)
