add_subdirectory(undo-framework)
add_subdirectory(logger)
if (CMAKE_SYSTEM_NAME STREQUAL "Linux")
  add_subdirectory(ui)
endif()
add_subdirectory(command-line)
add_subdirectory(signals)
add_subdirectory(file-manager)
add_subdirectory(event-bus)
add_subdirectory(resource-manager)
add_subdirectory(configuration-manager)
add_subdirectory(job-queue)
